--- a/01/index.html
+++ b/01/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div>dddddd</div>
-    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam dolor nobis consectetur vel modi non minima, aut culpa quisquam molestiae dolore fugiat cupiditate accusamus neque iste et nostrum numquam beatae?</div>
+    <div></div>
   </body>
 </html>
